Fixed the CSS menu problem in IE. The solution was to add overflow:hidden to the div#menu.

--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -21,7 +21,8 @@ body {
 div#menu {
     margin-top:1em;
     background-color:#42637B;
-    height: 40px;
+    height: 26px;
+    overflow: hidden;
 }
 
 div#menu ul {
